tests/baselines/reference/parserUnaryExpression4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserUnaryExpression4.ts (1 errors) ====
    ++{};
      ~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.